<resources>
    <string name="app_name">JobTracker</string>
    <string name="buttonNewData">Внести данные</string>
    <string name="buttonGetData">Мои данные</string>
    <string name="buttonNewGas">Топливо</string>
    <string name="buttonSettings">Настройки</string>
    <string name="main_page_block">За этот месяц:</string>
    <string name="Default_jobCost">0</string>
    <string name="Default_data">12 Dec 2024</string>


    <string name="pointsPlaceholder">Кол-во точек</string>
    <string name="cargoWeight">Общий вес груза</string>
    <string name="switchForAdditionalPoints">Включить доп точки</string>
    <string name="placeholderForAddPoints">Кол-во доп точек</string>
    <string name="buttonSaveNewData">Сохранить</string>


    <string name="buttonDeleteDB">Сбросить базу данных</string>
    <string name="buttonChangeConst">Настроить константы</string>
    <string name="buttonEditDB">Разрешить изменения в базу данных</string>

    <string name="modalTitle">Новые константы</string>
    <string name="costPerPoint">Стоимость за точку</string>
    <string name="departureFee">Ставка</string>
    <string name="pricePerTon">Цена за тонну</string>
    <string name="buttonSaveConst">Сохранить</string>

    <string name="buttonGetDataForMonth">Данные за месяц</string>
    <string name="buttonGetDataForDay">Данные за день</string>

    <string name="inputChoseDate">Выбрать дату</string>

    <string name="textViewOnGetDayData">Показатели за выбранную дату:</string>
    <string name="pointsForDay">Кол-точек за день</string>
    <string name="cargoWeightForDay">Вес за день</string>
    <string name="AdditionalPointsForDay">Доп. точки</string>
    <string name="TotalJobCost">Прибыль за день</string>
    <string name="alertNoRecords">Данных за день нету</string>

    <string name="doYouWantToEditTodayData">Изменить данные за сегодня?</string>
    <string name="editDataToday">Изменить данные</string>
    <string name="cancelEditing">Отмена</string>

    <string name="editWarning">Данные введенные на этой странице заменят предыдущие данные за этот день</string>

    <string name="pointsForMonth">Кол-точек за месяц</string>
    <string name="cargoWeightForMonth">Вес за месяц</string>
    <string name="AdditionalPointsForMonth">Доп. точки за месяц</string>
    <string name="TotalJobCostMonth">Прибыль за месяц</string>


    <string name="edittextYear">Введите год</string>
    <string name="buttonLoadData">Загрузить</string>
    <string name="alertNoDataForMonth">Данных за месяц нету</string>

    <string name="Greeting">Привет! Это приложения для просчета ЗП и ведения статистики о рабочих днях. Для того что бы начать пользоваться приложением заполни поля ниже! </string>
    <string name="gasPrice">Цена топлива</string>
    <string name="gasAmount">Кол-во топлива</string>
    <string name="totalGasSpend">Сумма за топливо</string>
    <string name="changeDataForDate">Изменит данные за день</string>
    <string name="changeDayData">Изменить данные</string>
    <string name="addNewWay">Доп. маршрут</string>
    <string name="paymentForWay">Ставка</string>

</resources>