    <?xml version="1.0" encoding="utf-8"?>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="164dp"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="92dp"
            android:background="@drawable/rounded_frame"
            android:orientation="vertical">

            <TextView
                android:id="@+id/staticText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:text="@string/main_page_block"
                android:textAlignment="center"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/totalCost"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/Default_jobCost"
                android:textAlignment="center"
                android:textSize="40sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="20sp"
                android:layout_marginTop="10dp"
                android:text="@string/Default_data"/>
        </LinearLayout>

        <Button
            android:id="@+id/buttonNewData"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:text="@string/buttonNewData"
            android:layout_marginTop="230dp"
            android:layout_gravity="center"
            android:layout_marginHorizontal="30dp"
            android:textSize="20sp"
            android:textColor="@color/text"/>

        <Button
            android:id="@+id/buttonGetData"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:text="@string/buttonGetData"
            android:layout_marginTop="16dp"
            android:layout_gravity="center"
            android:layout_marginHorizontal="30dp"
            android:textSize="20sp"
            android:textColor="@color/text"/>

        <Button
            android:id="@+id/buttonSettings"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:text="@string/buttonSettings"
            android:layout_marginTop="16dp"
            android:layout_gravity="center"
            android:layout_marginHorizontal="30dp"
            android:textSize="20sp"
            android:textColor="@color/text"/>


    </LinearLayout>
