<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginVertical="180dp"
    android:layout_marginHorizontal="30dp"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:background="@drawable/rounded_modal"
    tools:context=".EditConstActivityModal">

    <ImageButton
        android:id="@+id/x_close"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="20dp"
        android:layout_gravity="end"
        android:scaleType="fitCenter"
        android:src="@drawable/close"
        android:background="@android:color/transparent"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/modalTitle"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/costPerPoint"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="15dp"/>


    <EditText
        android:id="@+id/costPerPointConst"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:digits="0123456789"
        android:layout_marginTop="5dp"
        android:layout_marginHorizontal="15dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/departureFee"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="15dp"/>


    <EditText
        android:id="@+id/departureFeeConst"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:digits="0123456789"
        android:layout_marginTop="5dp"
        android:layout_marginHorizontal="15dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/pricePerTon"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="15dp"/>


    <EditText
        android:id="@+id/pricePerTon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:digits=".0123456789"
        android:layout_marginTop="5dp"
        android:layout_marginHorizontal="15dp"/>

    <Button
        android:id="@+id/buttonSaveConst"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_gravity="center_horizontal"
        android:textSize="20sp"
        android:enabled="true"
        android:text="@string/buttonSaveConst"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="40dp"/>


</LinearLayout>