<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main"
    android:orientation="vertical">

    <ImageButton
        android:id="@+id/arrow_back2"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="20dp"
        android:scaleType="fitCenter"
        android:src="@drawable/navbar___left"
        android:background="@android:color/transparent"/>


    <!-- Не редактируемое поле для даты -->
    <EditText
        android:id="@+id/inputToPickADate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/inputChoseDate"
        android:focusable="false"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="50dp"
        android:inputType="date" />

    <!-- Здесь можно разместить другие элементы, например, контейнер для отображения результатов -->
    <TextView
        android:id="@+id/textViewResults"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:text="@string/textViewOnGetDayData"
        android:gravity="center_horizontal"
        android:textSize="20sp"
        android:layout_marginTop="24dp"/>

    <TextView
        android:id="@+id/tvAlertNoRecords"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:text="@string/alertNoRecords"
        android:textColor="@color/error_text"
        android:visibility="invisible"
        android:gravity="center_horizontal"
        android:textSize="20sp"
        android:layout_marginTop="24dp"/>

    <LinearLayout
        android:id="@+id/getDataForDayResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"

        android:visibility="invisible"
        android:orientation="vertical"
        android:paddingBottom="40dp"
        tools:background="@android:color/darker_gray">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="30dp"
            android:gravity="center_horizontal"
            android:text="@string/pointsForDay"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/edittextPointsForDay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="30dp"
            android:gravity="center_horizontal"
            android:textSize="20sp"
            tools:text="Colvo-tocheck" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="30dp"
            android:gravity="center_horizontal"
            android:text="@string/cargoWeightForDay"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/edittextTotalWeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="30dp"
            android:gravity="center_horizontal"
            tools:text="Ves za den"
            android:textSize="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="30dp"
            android:gravity="center_horizontal"
            android:text="@string/AdditionalPointsForDay"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/edittextAdditionalPoints"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="30dp"
            android:gravity="center_horizontal"
            tools:text="additPoint"
            android:textSize="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="30dp"
            android:gravity="center_horizontal"
            android:text="@string/TotalJobCost"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/totalJobPaid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="30dp"
            android:gravity="center_horizontal"
            tools:text="zarplata"
            android:textSize="20sp" />

    </LinearLayout>


</LinearLayout>