<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity"
    android:orientation="vertical">

    <ImageButton
        android:id="@+id/arrow_back3"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="20dp"
        android:scaleType="fitCenter"
        android:src="@drawable/navbar___left"
        android:background="@android:color/transparent"/>

    <Button
        android:id="@+id/buttonChangeConstant"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_gravity="center"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="100dp"
        android:enabled="true"
        android:text="@string/buttonChangeConst"
        android:textSize="20sp" />

    <Button
        android:id="@+id/buttonEditDB"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_gravity="center"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="40dp"
        android:enabled="true"
        android:text="@string/buttonEditDB"
        android:textSize="20sp" />

    <Button
        android:id="@+id/buttonDeleteDB"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_gravity="center"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="300dp"
        android:enabled="false"
        android:text="@string/buttonDeleteDB"
        android:textSize="20sp" />

</LinearLayout>