<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusable="true"
    android:orientation="vertical"
    tools:context=".NewDataActivity">

    <ImageButton
        android:id="@+id/arrow_back9"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="30dp"
        android:background="@android:color/transparent"
        android:scaleType="fitCenter"
        android:src="@drawable/navbar___left" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/pointsPlaceholder"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/inputPointsCountAdditional"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="8dp"
            android:digits="0123456789"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:inputType="number" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="6dp"
            android:text="@string/cargoWeight"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/inputTotalWeightAdditional"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="8dp"
            android:digits="0123456789."
            android:inputType="number" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="6dp"
            android:text="@string/paymentForWay"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/paymentForWayAdditional"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="8dp"
            android:digits="0123456789"
            android:inputType="number" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:orientation="horizontal"
        android:paddingHorizontal="20dp"
        android:paddingVertical="16dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/switchForAdditionalPoints"
            android:textSize="20sp" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switchButtonAdditional"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:thumbTint="@color/input_normal_background"
            app:trackTint="@color/input_disabled_background" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="21dp"
            android:text="@string/placeholderForAddPoints"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/inputPointsAdditional"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="8dp"
            android:alpha="0.5"
            android:digits="0123456789"
            android:enabled="false"
            android:inputType="number" />

    </LinearLayout>

    <Button
        android:id="@+id/buttonSaveDataAdditional"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_gravity="center"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="50dp"
        android:enabled="false"
        android:text="@string/buttonSaveNewData"
        android:textColor="@color/text"
        android:textSize="20sp" />

</LinearLayout>